creation of page and signup page

--- a/templates/tomorrowdreams/djsmixes.html.twig
+++ b/templates/tomorrowdreams/djsmixes.html.twig
@@ -16,7 +16,7 @@
 
       <!--Card image-->
       <div class="view overlay">
-        <img class="card-img-top" src="https://static.wixstatic.com/media/6bfe20_75c1cdafc3a1420b811c4c3e3b08c1c9~mv2_d_2000_2000_s_2.png/v1/fill/w_359,h_310,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_75c1cdafc3a1420b811c4c3e3b08c1c9~mv2_d_2000_2000_s_2.webp" width="auto" height="300"
+        <img class="card-img-top" src="https://static.wixstatic.com/media/6bfe20_75c1cdafc3a1420b811c4c3e3b08c1c9~mv2_d_2000_2000_s_2.png/v1/fill/w_359,h_310,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_75c1cdafc3a1420b811c4c3e3b08c1c9~mv2_d_2000_2000_s_2.webp" width="auto" height="400"
           alt="Card image cap">
         <a href="#!">
           <div class="mask rgba-white-slight"></div>
@@ -44,7 +44,7 @@
     <div class="card">
 
       <div class="view overlay">
-        <img class="card-img-top" src="https://static.wixstatic.com/media/6bfe20_def231abd1064b22877e544c37ccad62~mv2.png/v1/fill/w_443,h_199,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_def231abd1064b22877e544c37ccad62~mv2.webp" width="auto" height="300"
+        <img class="card-img-top" src="https://static.wixstatic.com/media/6bfe20_def231abd1064b22877e544c37ccad62~mv2.png/v1/fill/w_443,h_199,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_def231abd1064b22877e544c37ccad62~mv2.webp" width="auto" height="400"
           alt="Card image cap">
         <a href="#!">
           <div class="mask rgba-white-slight"></div>
@@ -98,12 +98,12 @@
     
     
     
-    
-    </div>
-    </div>
-    </div>
+            <hr style="background-color:gray;">
 
-<hr>
 
+      
+    </div>
+    </div>
+    </div>
 
 {% endblock %}
