--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact">Contact</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="login">Login/Sign-up</a>
+            </li>
           </ul>
           <img class="my-2 my-lg-0">
           <img src="https://img.icons8.com/material-rounded/24/000000/person-male.png" />
