--- a/templates/tomorrowdreams/home.html.twig
+++ b/templates/tomorrowdreams/home.html.twig
@@ -1,71 +1,15 @@
 {% extends "base.html.twig" %}
 
-{% block body %}
+{% block body %}<br>
 
-<div class="container"><br><br>
-  <div class="row">
 
 
     <h4>Exclusive Mixes</h4><br><br>
-
-
-
-    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel" width="100" height="100">
-      <!--Indicators-->
-      <ol class="carousel-indicators">
-        <!--
-    <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-2" data-slide-to="1"></li>
-    <li data-target="#carousel-example-2" data-slide-to="2"></li>-->
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <div class="view">
-            <img class="d-block w-50" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="First slide">
-            <div class="mask rgba-black-light"></div>
-          </div>
-          <div class="carousel-caption">
-
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-flex w-50" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" width="100"
-              height="auto" alt="Second slide">
-            <div class="mask rgba-black-strong"></div>
-          </div>
-          <div class="carousel-caption">
-
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-50" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-
-          </div>
-        </div>
-      </div>
-      <!--/.Slides-->
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-      <!--/.Controls-->
-    </div>
+    <h4 class="">Top10 Mixes</h4>
 
     <!--/.Carousel Wrapper-->
     <!--Panel-->
+    
     <div class="container">
       <div class="row">
         <div class="col-5">
@@ -150,5 +94,6 @@
 </div>
 
 <br>
+<hr style="background-color:grey;"
 
 {% endblock %}
