--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
   <body>
     <nav id="navigation">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/"><img src="{{asset('image/LOGOV2.png')}}" name="Logo" width="auto"
+        <a class="navbar-brand" href="/"><img src="{{asset('image/Tomorrow-Dreams-final2016-bynelson.png')}}" name="Logo" width="auto"
             height="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
           aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,14 +35,21 @@
             <li class="nav-item">
               <a class="nav-link" href="contact">Contact</a>
             </li>
-             <li class="nav-item">
-              <a class="nav-link" href="login">Login/Sign-up</a>
-            </li>
+          
           </ul>
-          <img class="my-2 my-lg-0">
-          <img src="https://img.icons8.com/material-rounded/24/000000/person-male.png" />
-          <a></a>
-          </img>
+          <div class="my-2 col-lg-0">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+              width="30" height="30"
+              viewBox="0 0 172 172"
+              style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#666666"><path d="M86,36.28125c-17.06562,0 -30.90625,13.84062 -30.90625,30.90625c0,17.06562 13.84063,30.90625 30.90625,30.90625c17.06562,0 30.90625,-13.84063 30.90625,-30.90625c0,-17.06563 -13.84063,-30.90625 -30.90625,-30.90625zM86,44.34375c12.63125,0 22.84375,10.2125 22.84375,22.84375c0,12.63125 -10.2125,22.84375 -22.84375,22.84375c-12.63125,0 -22.84375,-10.2125 -22.84375,-22.84375c0,-12.63125 10.2125,-22.84375 22.84375,-22.84375zM86,108.84375c-22.0375,0 -42.46145,11.95885 -53.34583,31.0401c-1.075,1.88125 -0.40417,4.43385 1.61145,5.50885c0.67188,0.40312 1.34375,0.53802 2.01563,0.53802c1.34375,0 2.82135,-0.67187 3.49322,-2.01562c9.40625,-16.6625 27.14428,-27.00885 46.22553,-27.00885c19.08125,0 36.81875,10.34635 46.35938,27.00885c1.075,1.88125 3.6276,2.5526 5.50885,1.4776c1.88125,-1.075 2.5526,-3.6276 1.4776,-5.50885c-10.88438,-19.08125 -31.30833,-31.0401 -53.34583,-31.0401z"></path></g></g></svg>          <a></a>
+          </div>
+          <div class="my-2 col-lg-1">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                  width="25" height="25"
+                  viewBox="0 0 172 172"
+                  style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#666666"><path d="M86,3.44c-19.04094,0 -34.4,15.35906 -34.4,34.4v6.88h-27.1975l-0.3225,3.01l-13.76,120.4l-0.43,3.87h152.22l-0.43,-3.87l-13.76,-120.4l-0.3225,-3.01h-27.1975v-6.88c0,-19.04094 -15.35906,-34.4 -34.4,-34.4zM86,10.32c15.35906,0 27.52,12.16094 27.52,27.52v6.88h-55.04v-6.88c0,-15.35906 12.16094,-27.52 27.52,-27.52zM30.6375,51.6h20.9625v7.8475c-2.05594,1.19594 -3.44,3.37281 -3.44,5.9125c0,3.80281 3.07719,6.88 6.88,6.88c3.80281,0 6.88,-3.07719 6.88,-6.88c0,-2.53969 -1.38406,-4.71656 -3.44,-5.9125v-7.8475h55.04v7.8475c-2.05594,1.19594 -3.44,3.37281 -3.44,5.9125c0,3.80281 3.07719,6.88 6.88,6.88c3.80281,0 6.88,-3.07719 6.88,-6.88c0,-2.53969 -1.38406,-4.71656 -3.44,-5.9125v-7.8475h20.9625l13.0075,113.52h-136.74z"></path></g></g></svg>
+
+          </div>
         </div>
       </nav>
     </nav>
