--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -14,11 +14,15 @@
         <br>
         <br>
                     <img class="col-lg-12" src="https://static.wixstatic.com/media/6bfe20_def231abd1064b22877e544c37ccad62~mv2.png/v1/fill/w_443,h_199,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_def231abd1064b22877e544c37ccad62~mv2.webp">
-                </div>
+                </div><br><br>
 
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
                         <form>
+                        <div class="text-center">
+                        <button type="submit" class="btn btn-outline-primary">Login With : &nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/color/20/000000/google-logo.png" name="">&nbsp;&nbsp;&nbsp;</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="submit" class="btn btn-outline-primary">Login With : &nbsp;&nbsp;&nbsp; <img src="https://img.icons8.com/color/22/000000/facebook.png">&nbsp;&nbsp;&nbsp;</button>
+                        </div>
                             <div class="form-group"><br><br>
                                 <label class="form-control-label">USERNAME</label>
               
@@ -32,19 +36,22 @@
                             <div class="col-lg-12 loginbttm">
                                 <div class="col-lg-6 login-btm login-text">
                                     <!-- Error Message -->
+                                    
                                 </div>
                             </div>
-                       
-                            <label class="col-lg-12 login-title">or  login with  : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/color/20/000000/google-logo.png" name="">
-                                &nbsp;&nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/color/30/000000/facebook.png"/>
-                        </label>
-                        
+                        <div class="col-lg-10 login-btm login-button">
+                                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>&nbsp;&nbsp;&nbsp;
+                                  </div><br>
+                            
+                        <div class="col-lg-10"><a href="signup">Jump to Sign-up </a></div>
+
                     </div><br>
-                     <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>
-                                </div>
+                    
                 </div>
-                <div class="col-lg-3 col-md-2"></div>
+                <div class="col-lg-3 col-md-2">
+                
+                
+                </div>
                  </form>
             </div>
         </div>
