--- a/templates/login/signup.html.twig
+++ b/templates/login/signup.html.twig
@@ -18,20 +18,28 @@
 
                 <div class="col-lg-12 login-form">
                     <div class="col-lg-12 login-form">
-                        <form>
-                          
+                        <form><br><br>
+                          <div class="text-center">
+                        <button type="submit" class="btn btn-outline-primary">Sign-up With : &nbsp;&nbsp;&nbsp;<img src="https://img.icons8.com/color/20/000000/google-logo.png" name="">&nbsp;&nbsp;&nbsp;</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="submit" class="btn btn-outline-primary">Sign-up With : &nbsp;&nbsp;&nbsp; <img src="https://img.icons8.com/color/22/000000/facebook.png">&nbsp;&nbsp;&nbsp;</button>
+                        </div><br><br>
                             <div class="form-group">
                                 <label class="form-control-label">First Name</label>
-                                <input type="password" class="form-control" i>
+                                <input type="text" class="form-control" i>
                             </div>
                               <div class="form-group">
                                 <label class="form-control-label">Last Name</label>
-                                <input type="password" class="form-control" i>
+                                <input type="text" class="form-control" i>
                             </div>
                               <div class="form-group">
+                                <label class="form-control-label">Username  </label>
+                                <input type="text" class="form-control" i>
+                                </div>
+
+                                <div class="form-group">
                                 <label class="form-control-label">Password</label>
                                 <input type="password" class="form-control" i>
-                            </div>
+                                </div>
                                 
                               <div class="form-group">
                                 <label class="form-control-label">Confirm Your Password</label>
@@ -39,12 +47,14 @@
                             </div>
                               <div class="form-group">
                                 <label class="form-control-label">Email</label>
-                                <input type="password" class="form-control" i>
+                                <input type="email" class="form-control" i>
                             </div>
                               <div class="form-group">
                                 <label class="form-control-label">Confirm Your Email</label>
-                                <input type="password" class="form-control" i>
+                                <input type="email" class="form-control" i>
                             </div>
+
+                                            <div><a href="login">Back to Login </a></div>
 
 
 
@@ -53,13 +63,16 @@
                                     <!-- Error Message -->
                                 </div>
                             </div>
+
                        
                             
                         
-                    </div><br>
-                     <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>
-                                </div>
+                    </div>
+                     <div class="col-lg-10 login-btm login-button">
+                    
+                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+
+                        </div>
                 </div>
                 <div class="col-lg-3 col-md-2"></div>
                  </form>
