--- a/templates/tomorrowdreams/about.html.twig
+++ b/templates/tomorrowdreams/about.html.twig
@@ -47,7 +47,7 @@
                 <!--Card image-->
                 <div class="view overlay">
                     <img class="card-img-top"
-                        src="https://static.wixstatic.com/media/6bfe20_def231abd1064b22877e544c37ccad62~mv2.png/v1/fill/w_443,h_199,al_c,q_85,usm_0.66_1.00_0.01/6bfe20_def231abd1064b22877e544c37ccad62~mv2.webp"
+                        src="{{asset('image/Tomorrow-Dreams-final2016-DJAntimoLUPO.png')}}"
                         width="auto" height="400" alt="Card image cap">
                     <a href="#!">
                         <div class="mask rgba-white-slight"></div>
