--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
   <body>
     <nav id="navigation">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/"><img src="{{asset('image/Tomorrow-Dreams-final2016-bynelson.png')}}" name="Logo" width="auto"
+        <a class="navbar-brand" href="/"><img src="{{('image/Tomorrow-Dreams-final2016-bynelson.png')}}" name="Logo" width="auto"
             height="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
           aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,6 +77,9 @@
 
 
   {% block javascrypte %}
+    {{ encore_entry_script_tags('app') }}
+      <script src="/build/runtime.js"></script>
+      <script src="/build/app.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
