--- a/templates/tomorrowdreams/home.html.twig
+++ b/templates/tomorrowdreams/home.html.twig
@@ -4,24 +4,23 @@
 
 
 
-    <h4>Exclusive Mixes</h4><br><br>
-    <h4 class="">Top10 Mixes</h4>
+    <!--<h4>Exclusive Mixes</h4><br><br>-->
+    <!--<h4 class="">Top10 Mixes</h4>-->
 
     <!--/.Carousel Wrapper-->
 
     <!--Panel-->
   
-    <div class="container">
+    <!--<div class="container">
       <div class="row">
         <div class="col-5">
 
           <div class="card card-body align-content-md-between">
 
-
+          <div class="col-7">
+          
             <h4 class="card-title">New Mixes</h4>
-
             <table class="table table-striped table-responsive-md btn-table">
-
               <tbody>
                 <tr>
                   <th scope="row">1</th>
@@ -85,7 +84,7 @@
             </div>
           </div>
 
-          <!--/.Panel-->
+          </.Panel>
         </div>
       </div>
     </div>
